fix(context_menu): 1px overflow in height on mobile

--- a/apps/client/src/menus/custom-items/NoteColorPicker.css
+++ b/apps/client/src/menus/custom-items/NoteColorPicker.css
@@ -76,7 +76,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-
+    overflow: hidden;
 }
 
 .note-color-picker .custom-color-cell.custom-color-cell-empty {
